--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -162,6 +162,7 @@ body {
   font-size: 14px;
   border: 0;
   color: #fff;
+  margin-top: 10px;
 }
 
 .main-wrapper .content a.logout:hover {
@@ -287,7 +288,59 @@ ul.providers {
   background: #7159c1;
   margin-top: 5px;
 }
+.return-button {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 14px;
+  border: 0;
+  color: #fff;
+  background: #de6d6d;
+  text-decoration: none;
+  margin-top: 10px;
+}
+.btn-purple {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 14px;
+  border: 0;
+  color: #fff;
+  background: #7159c1;
+  text-decoration: none;
+  margin-top: 10px;
+}
 
 .main-wrapper .content form button:hover {
   background: #634dac;
+}
+
+.return-button:hover {
+  background: #c15858;
+}
+
+.btn-green:hover {
+  background: #634dac;
+}
+.subtitle-image {
+  margin-bottom: -8px;
+}
+.subtitle-appointments {
+  margin-top: 10px;
+}
+.available-icon {
+  margin-left: 5px;
+}
+.appointment-hour {
+  margin-right: 5px;
+  margin-top: 5px;
+  float: left;
 }
