--- a/src/app/views/available/provider.njk
+++ b/src/app/views/available/provider.njk
@@ -4,9 +4,9 @@
     <img src="/images/baseline-schedule-24px.svg" />
     <li class="provider">
       <div style="display: inline-block;">
-        <img style=" margin-bottom: -20px;" src="/files/{{ user.user.avatar }}" />
-        <strong style="width:100%;">{{ user.user.name }}</strong><br>
-        <small style="width:100%;  margin-left: 67px;">{{ user.user.email }}</small>
+        <img style=" margin-bottom: -20px; " src="/files/{{ user.user.avatar }}" />
+        <strong style="width:100%;margin-left: 7px;">{{ user.user.name }}</strong><br>
+        <small style="width:100%;  margin-left: 57px;">{{ user.user.email }}</small>
       </div>
     </li>
   {% endfor %}
