--- a/src/app/views/dashboards/dashboard.njk
+++ b/src/app/views/dashboards/dashboard.njk
@@ -7,20 +7,27 @@
     {% include "_partials/flash.njk" %}
     <ul class="providers">
     {% for provider in providers %}
-      <li class="provider">
-        <div>
+      {% if provider.id !== loggedUser.id %}
+        <li class="provider">
           <img src="/files/{{ provider.avatar }}" />
-          <strong>{{ provider.name }}</strong>
-        </div>
-        <a href="/app/appointments/new/{{ provider.id }}">+</a>
-      </li>
-
+          <div>
+            <strong>{{ provider.name }}</strong>
+            {% if provider.price !== null %}
+              <small>Valor: {{ provider.price }}R$</small>
+            {% endif %}
+            <small>{{ provider.address}}</small>
+          </div>
+          <a href="/app/appointments/new/{{ provider.id }}">+</a>
+        </li>
+      {% endif %}
     {% endfor %}
     </ul>
     {% if isProvider === 'true' %}
-      <p>Para checar os <b>agendamentos dos seus clientes</b> basta clicar no botão abaixo: </p>
-      <a href="/app/appointments/checked" class="btn-purple">Checar agendamentos</a>
+      <p>Para checar os <b>agendamentos dos seus clientes</b> basta clicar no <b>'Minha agenda'</b> </p>
+      <a href="/app/appointments/checked" class="btn-purple">Minha agenda</a>
     {% endif %}
+    <a href="/app/appointments" class="btn-purple">Cortes marcados</a>
+    <a href="/app/profile/{{user.id}}" class="btn-green">Atualize seus dados</a>
     <a href="/app/logout" class="logout">Sair</a>
   </div>
 {% endblock %}
